# Lariat

./: .cursorrules  .editorconfig  .env.example  .flake8  .gitignore  .gitnexusignore  .graphifyignore  .lintstagedrc.json  .venv  AGENTS.md  AGENT_STATE.md  ANTIGRAVITY.md  CHANGELOG.md  CLAUDE.md  CODEX.md  DEMO.md  Food-Bev AI Lab.command  GEMINI.md  Lariat Cockpit.command  ORCHESTRATOR_STATUS.md  README.md  SMOKE_TESTS.md  STRATEGY.md  electron-builder.yml  eslint.config.js  instrumentation.ts  jest.config.js  jest.setup.js  lariat_executive_dashboard.html  middleware.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  requirements-dev.txt  requirements-tools.txt  tasks.yaml  tasks.yaml.example  tsconfig.json  tsconfig.scripts.json
.claude/: settings.json
.playwright-cli/: page-2026-06-04T06-52-58-190Z.yml  page-2026-06-04T06-54-42-652Z.yml  page-2026-06-04T06-57-39-959Z.yml  page-2026-06-04T06-57-57-011Z.yml  page-2026-06-04T06-58-20-814Z.yml  page-2026-06-04T07-04-03-459Z.yml  page-2026-06-04T07-04-18-912Z.yml  page-2026-06-04T07-04-42-082Z.yml  page-2026-06-04T07-05-04-227Z.yml  page-2026-06-04T07-07-26-545Z.yml  page-2026-06-04T07-07-37-478Z.yml  page-2026-06-04T07-07-42-129Z.yml  page-2026-06-04T07-07-56-487Z.yml  page-2026-06-04T07-10-28-659Z.yml  page-2026-06-04T07-11-28-481Z.yml  (+1 more)
cad-kernel/: CMakeLists.txt  README.md
cad-kernel/docs/: apple-unified-engine.md
cad-kernel/include/apple/audio/: audio_session.hpp  procedural_synth.hpp
cad-kernel/include/apple/graphics/: collaboration.hpp  engine.hpp  intents_bridge.hpp  render_backend.hpp  scene_object.hpp  types.hpp
cad-kernel/include/apple/graphics/constructs/: floor_plan.hpp  menu_designer.hpp  stage_setup.hpp
cad-kernel/include/core/: scene_graph.hpp
cad-kernel/include/geom/: boolean_ops.hpp  bounding_volume.hpp  clothoid.hpp  crs.hpp  curves.hpp  dimensioning.hpp  geodesy.hpp  mass_properties.hpp  octree.hpp  quadtree.hpp  selection.hpp  tin.hpp  transform.hpp  vertical_alignment.hpp
cad-kernel/include/io/: dxf_parser.hpp
cad-kernel/include/ops/: pathfinding.hpp  seating_layout.hpp
cad-kernel/include/solver/: jacobian.hpp  newton_raphson.hpp
cad-kernel/src/apple/: demo_main.cpp
cad-kernel/src/apple/audio/: audio_session.cpp  procedural_synth.cpp
cad-kernel/src/apple/graphics/: collaboration.cpp  engine.cpp  intents_bridge.cpp  render_backend.cpp  scene_object.cpp
cad-kernel/src/apple/graphics/constructs/: floor_plan.cpp  menu_designer.cpp  stage_setup.cpp
cad-kernel/src/core/: scene_graph.cpp
cad-kernel/src/geom/: boolean_ops.cpp  bounding_volume.cpp  clothoid.cpp  crs.cpp  curves.cpp  dimensioning.cpp  geodesy.cpp  mass_properties.cpp  octree.cpp  quadtree.cpp  selection.cpp  tin.cpp  transform.cpp  vertical_alignment.cpp
cad-kernel/src/io/: dxf_parser.cpp
cad-kernel/src/ops/: pathfinding.cpp  seating_layout.cpp
cad-kernel/src/solver/: jacobian.cpp  newton_raphson.cpp
cad-kernel/tests/: test_apple_audio.cpp  test_apple_collaboration.cpp  test_apple_engine.cpp  test_apple_intents.cpp  test_clothoid.cpp  test_crs.cpp  test_curves.cpp  test_dimensioning.cpp  test_dummy.cpp  test_floor_plan.cpp  test_geodesy.cpp  test_io.cpp  test_mass_properties.cpp  test_menu_designer.cpp  test_octree.cpp  test_pathfinding.cpp  test_quadtree.cpp  test_scene_graph.cpp  test_seating_layout.cpp  test_selection.cpp  test_solver.cpp  test_stage_setup.cpp  test_tin.cpp  test_transform.cpp  test_vertical_alignment.cpp
(+2649 files in other folders)
